--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <!-- <script src="//cdn.jsdelivr.net/phaser/2.4.6/phaser.min.js"></script> -->
 
     <!--GENERIC SCRIPTS-->
-    <!-- <script type="text/javascript" src="./assets/js/Display/Sprites.js"></script> -->
+    <script type="text/javascript" src="./assets/js/main.js"></script>
 
 
     <!--CSS IMPORTS-->
-    <!-- <link href="./assets/css/playback.css" type="text/css" rel="stylesheet" /> -->
+    <link href="./assets/css/main.css" type="text/css" rel="stylesheet" />
     
 </head>
 
 <body>
-	<div>Hello work in progress</div>
+	<div id="div_mainContainer">
+        This site is currently under construction.
+    </div>
 </body>
 
 </html>
